[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/sprites/earth.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/earth.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]

[node name="earth" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.729412, 0.952941, 0, 1 )
position = Vector2( 0, -256 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -256 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -448 )
shape = SubResource( 1 )

[node name="runInPlace" type="Area2D" parent="."]
position = Vector2( 0, 512 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="runInPlace"]
position = Vector2( 8, -1048 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="runInPlace"]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="runInPlace" to="." method="_on_runInPlace_body_entered"]
[connection signal="timeout" from="runInPlace/Timer" to="." method="_on_Timer_timeout"]
